Fix display value overflow

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
 
 .calculator {
   padding: 1.5rem;
+  width: 400px;
 
   background-color: #111;
   border-radius: 0.5rem;
@@ -31,14 +32,19 @@ body {
 
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .display {
+  width: 100%;
   font-size: 3rem;
   font-weight: lighter;
   text-align: right;
   margin-top: 3rem;
   min-height: 100px;
+  overflow-wrap: break-word;
+  word-break: break-all;
+  padding-bottom: 1rem;
 }
 
 .numpad {
